<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="@dimen/filter_dialog_box"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_background_white"
    android:layout_gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/sorting_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_twelve"
        android:textColor="@color/shadow_black"
        app:fontFamily="@font/font_regular"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/sort_by"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sorting_all_text_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sorting_all_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_twelve"
            android:text="@string/all_employees"
            android:textColor="@color/shadow_black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_normal"
            app:fontFamily="@font/font_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/dimen_32"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/margin_twelve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_emp_all" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sorting_inside_text_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sorting_inside_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_twelve"
            android:textColor="@color/shadow_black"
            app:fontFamily="@font/font_regular"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/employees_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="@dimen/dimen_32"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/margin_twelve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_emp_in" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sorting_sorting_outside_text_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sorting_outside_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_twelve"
            android:text="@string/employees_outside"
            android:textColor="@color/shadow_black"
            android:textSize="@dimen/text_size_normal"
            app:fontFamily="@font/font_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/dimen_32"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/margin_twelve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_emp_out" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>